Cortinados e rolos section done

--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                   empresa de raiz familiar que cresceu graças empenho e carisma
                   da sua fundadora, Beatriz Madalena, que desde sempre procurou
                   satisfazer as necessidades do mercado do retalho têxtil.
+                </p>
+                <p>
                   Dispomos de um espaço com 1300m2 divididos por três pisos,
                   onde pode encontrar uma enorme variedade de produtos e
                   acessórios nas áreas de tecidos, têxteis lar e decoração.
@@ -231,13 +233,15 @@
                 <p>
                   Temos uma equipa de profissionais que lhe irão recebê-lo e
                   prestar-lhe um atendimento personalizado, prontos a esclarecer
-                  todas as suas dúvidas. O profissionalismo e rigor dos seus
-                  serviços e a diversidade e qualidade dos seus produtos faz da
-                  Beatriz dos Panos um local de referência, onde todos os
-                  clientes satisfazem as suas necessidades, com uma excelente
-                  relação qualidade/preço. A satisfação do cliente é a nossa
-                  prioridade!
+                  todas as suas dúvidas.
                 </p>
+                <p>
+                  O profissionalismo e rigor dos seus serviços e a diversidade e
+                  qualidade dos seus produtos faz da Beatriz dos Panos um local
+                  de referência, onde todos os clientes satisfazem as suas
+                  necessidades, com uma excelente relação qualidade/preço.
+                </p>
+                <p>A satisfação do cliente é a nossa prioridade!</p>
               </div>
             </div>
           </div>
@@ -618,6 +622,47 @@
                 </p>
                 <p>Contacte-nos e peça o seu orçamento grátis!</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="site-section bg-light" id="cortinados-rolos-section">
+        <div class="container">
+          <div class="row mb-5">
+            <div class="col-12 text-center" data-aos="fade">
+              <h2 class="section-title mb-3">Cortinados e Rolos</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-5 mb-5" data-aos="fade-up">
+              <div class="mb-4">
+                <p>
+                  Regular a intensidade da luz natural, criando um ambiente mais
+                  acolhedor é uma missão fácil com as nossas soluções de
+                  cortinados, telas ou estores interiores.
+                </p>
+                <p>
+                  Confecionamos por medida estores laminados verticais, de rolo
+                  e blackouts, bem como todo o tipo de cortinados de tecido -
+                  dos mais encorpados (que impedem a passagem da luz e tornam a
+                  sua casa mais acolhedora) aos mais leves (que permitem a
+                  entrada de luz solar preservando a privacidade do seu lar).
+                </p>
+                <p>
+                  Dispomos também de uma grande variedade de calhas (simples ou
+                  duplas), varões e cabos para a concretização das suas soluções
+                  – tudo com serviço de transporte e montagem. Venha
+                  consultar-nos.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+              <img
+                src="images/cortinados-rolos.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
