--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="./images/logo.png" />
+    <link rel="icon" href="./assets/SVG/logo.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
       rel="stylesheet"
@@ -627,7 +627,7 @@
         </div>
       </section>
 
-      <section class="site-section bg-light" id="cortinados-rolos-section">
+      <section class="site-section" id="cortinados-rolos-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade">
