Loader and .gitignore changed

--- a/index.html
+++ b/index.html
@@ -190,12 +190,16 @@
       <section class="site-section" id="empresa-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h2 class="section-title mb-3">Empresa</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-5 mb-5" data-aos="fade-up">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <p>
                   No mercado de comércio de tecidos desde 1970, somos uma
@@ -210,7 +214,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img src="images/empresa.jpg" alt="Image" class="img-fluid" />
             </div>
           </div>
@@ -220,15 +228,23 @@
       <section class="site-section" id="equipa-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h2 class="section-title mb-3">Equipa</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <img src="images/equipa.jpg" alt="Image" class="img-fluid" />
             </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-5 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="mb-4">
                 <p>
                   Temos uma equipa de profissionais que lhe irão recebê-lo e
@@ -252,12 +268,18 @@
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-8 text-center">
-              <h2 class="section-title mb-3" data-aos="fade-up">Tecidos</h2>
+              <h2
+                class="section-title mb-3"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                Tecidos
+              </h2>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
                   src="images/tecidos_confecao_moda.jpg"
@@ -283,7 +305,11 @@
                 ></a>
               </div>
             </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-5 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="owl-carousel slide-one-item-alt-text">
                 <div>
                   <h2 class="section-title mb-3">Tecidos de Confeção e Moda</h2>
@@ -334,7 +360,7 @@
       <section class="site-section" id="tecidos-confecao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-5 mb-5" data-aos="fade-up">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <h3 class="h3 mb-4 text-black">Tecidos de Confeção e Moda</h3>
                 <p>
@@ -358,7 +384,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img
                 src="images/tecidos_confecao_moda.jpg"
                 alt="Image"
@@ -372,14 +402,18 @@
       <section class="site-section" id="tecidos-decoracao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-6 mb-5" data-aos="fade-up">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <img
                 src="images/tecidos_decoracao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
             </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-5 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="mb-4">
                 <h3 class="h3 mb-4 text-black">Tecidos de Decoração</h3>
                 <p>
@@ -410,7 +444,7 @@
       <section class="site-section" id="servicos-confecao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-5 mb-5" data-aos="fade-up">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <h3 class="h3 mb-4 text-black">Serviços de Confeção</h3>
                 <p>
@@ -432,7 +466,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img
                 src="images/servicos_confecao.jpg"
                 alt="Image"
@@ -446,12 +484,20 @@
       <section class="site-section bg-light" id="decoracao-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h2 class="section-title mb-3">Decoração</h2>
             </div>
           </div>
           <div class="row align-items-stretch">
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
@@ -473,7 +519,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
@@ -495,7 +545,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
@@ -523,19 +577,27 @@
       <section class="site-section bg-light" id="artigos-decoracao-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h3 class="h3 mb-4 text-black">Artigos de Decoração</h3>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <img
                 src="images/artigos_decoracao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
             </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-5 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="mb-4">
                 <p>
                   Com os nossos artigos têxteis para decoração, pode acrescentar
@@ -558,12 +620,16 @@
       <section class="site-section bg-light" id="hotelaria-restauracao-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h3 class="h3 mb-4 text-black">Hotelaria e Restauração</h3>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-5 mb-5" data-aos="fade-up">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <p>
                   Se procura uma decoração à sua medida e do seu negócio, nós
@@ -580,7 +646,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img
                 src="images/hotelaria_restauracao.jpg"
                 alt="Image"
@@ -594,19 +664,27 @@
       <section class="site-section bg-light" id="design-interiores-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h3 class="h3 mb-4 text-black">Design de Interiores</h3>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <img
                 src="images/design_interiores.jpg"
                 alt="Image"
                 class="img-fluid"
               />
             </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-5 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="mb-4">
                 <p>
                   Na Beatriz dos Panos não terá apenas uma equipa técnica apta a
@@ -630,12 +708,16 @@
       <section class="site-section" id="cortinados-rolos-section">
         <div class="container">
           <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h2 class="section-title mb-3">Cortinados e Rolos</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-5 mb-5" data-aos="fade-up">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <p>
                   Regular a intensidade da luz natural, criando um ambiente mais
@@ -657,7 +739,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img
                 src="images/cortinados-rolos.jpg"
                 alt="Image"
@@ -671,12 +757,20 @@
       <section class="site-section" id="portfolio-section">
         <div class="container">
           <div class="row mb-3">
-            <div class="col-12 text-center" data-aos="fade">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <h2 class="section-title mb-3">Portfólio</h2>
             </div>
           </div>
 
-          <div class="row justify-content-center mb-5" data-aos="fade-up">
+          <div
+            class="row justify-content-center mb-5"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
             <div id="filters" class="filters text-center button-group col-md-7">
               <button class="btn btn-primary active" data-filter="*">
                 Todos
@@ -693,7 +787,12 @@
             </div>
           </div>
 
-          <div id="posts" class="row no-gutter">
+          <div
+            id="posts"
+            class="row no-gutter"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="images/img_1.jpg"
@@ -839,18 +938,20 @@
         </div>
       </section>
 
-      <section
-        class="site-section bg-light"
-        id="contactos-section"
-        data-aos="fade"
-      >
+      <section class="site-section bg-light" id="contactos-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center">
-              <h2 class="section-title mb-3">Contacte-nos</h2>
+              <h2
+                class="section-title mb-3"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                Contacte-nos
+              </h2>
             </div>
           </div>
-          <div class="row mb-5">
+          <div class="row mb-5" data-aos="fade-up" data-aos-delay="100">
             <div class="col-md-3 text-center">
               <p class="mb-4">
                 <span class="icon-room d-block h4 text-primary"></span>
@@ -888,7 +989,7 @@
               </p>
             </div>
           </div>
-          <div class="row">
+          <div class="row" data-aos="fade-up" data-aos-delay="100">
             <iframe
               class="map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.6647033667064!2d-8.63261578458723!3d40.96692357930497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd247871cf94efc3%3A0x14468fc51a4a2b55!2sR.%20do%20Agueiro%20560%2C%204500-506%20Espinho!5e0!3m2!1sen!2spt!4v1583256483975!5m2!1sen!2spt"
