--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             >
               <div class="mb-4">
                 <p>
-                  Temos uma equipa de profissionais que lhe irão recebê-lo e
+                  Temos uma equipa de profissionais que irão recebê-lo e
                   prestar-lhe um atendimento personalizado, prontos a esclarecer
                   todas as suas dúvidas.
                 </p>
@@ -282,12 +282,17 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="images/tecidos_confecao_moda.jpg"
+                  src="images/tecidos_confecao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
                   src="images/tecidos_decoracao.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="images/complementos_confecao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -340,10 +345,23 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">Serviços de Confeção</h2>
+                  <h2 class="section-title mb-3">Complementos de Confeção</h2>
                   <p class="lead">
                     Se procura artigos e acessórios de costura para a execução
                     dos seus trabalhos de costura, chegou ao sítio certo.
+                  </p>
+                  <a
+                    href="#complementos-confecao-section"
+                    class="btn btn-primary smoothscroll"
+                    >Saber mais</a
+                  >
+                </div>
+                <div>
+                  <h2 class="section-title mb-3">Serviços de Confeção</h2>
+                  <p class="lead">
+                    Para além da confeção de artigos para decoração, também
+                    dispomos de serviço de confeção de todo o tipo de roupas por
+                    medida...
                   </p>
                   <a
                     href="#servicos-confecao-section"
@@ -390,7 +408,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/tecidos_confecao_moda.jpg"
+                src="images/tecidos_confecao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -441,12 +459,12 @@
         </div>
       </section>
 
-      <section class="site-section" id="servicos-confecao-section">
+      <section class="site-section" id="complementos-confecao-section">
         <div class="container">
           <div class="row containerRow">
             <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
-                <h3 class="h3 mb-4 text-black">Serviços de Confeção</h3>
+                <h3 class="h3 mb-4 text-black">Complementos de Confeção</h3>
                 <p>
                   Se procura artigos e acessórios de costura para a execução dos
                   seus trabalhos de costura, chegou ao sítio certo. Na nossa
@@ -457,13 +475,6 @@
                   acessórios para a confeção de artigos de vestuário e
                   têxteis-lar.
                 </p>
-                <p>
-                  Para além da confeção de artigos para decoração, também
-                  dispomos de serviço de confeção de todo o tipo de roupas por
-                  medida tais como roupas de cerimónia ou casuais, trajes
-                  temáticos ou batas e fardamentos para particulares, grupos ou
-                  empresas.
-                </p>
               </div>
             </div>
             <div
@@ -472,10 +483,40 @@
               data-aos-delay="100"
             >
               <img
+                src="images/complementos_confecao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="site-section" id="servicos-confecao-section">
+        <div class="container">
+          <div class="row containerRow">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+              <img
                 src="images/servicos_confecao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
+            </div>
+            <div
+              class="col-lg-5 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="mb-4">
+                <h3 class="h3 mb-4 text-black">Serviços de Confeção</h3>
+                <p>
+                  Para além da confeção de artigos para decoração, também
+                  dispomos de serviço de confeção de todo o tipo de roupas por
+                  medida tais como roupas de cerimónia ou casuais, trajes
+                  temáticos ou batas e fardamentos para particulares, grupos ou
+                  empresas.
+                </p>
+              </div>
             </div>
           </div>
         </div>
