--- a/index.html
+++ b/index.html
@@ -740,6 +740,17 @@
                   de transporte e entrega / montagem.
                 </p>
                 <p>Contacte-nos e peça o seu orçamento grátis!</p>
+                <p>
+                  <b
+                    >Parceiros:
+                    <a
+                      class="partner"
+                      href="http://www.ivomaia.com/index.php?pagina=lista_produtos2&lang=pt"
+                      target="_blank"
+                      >Ivo Maia</a
+                    ></b
+                  >
+                </p>
               </div>
             </div>
           </div>
@@ -1033,7 +1044,7 @@
           <div class="row" data-aos="fade-up" data-aos-delay="100">
             <iframe
               class="map"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.6647033667064!2d-8.63261578458723!3d40.96692357930497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd247871cf94efc3%3A0x14468fc51a4a2b55!2sR.%20do%20Agueiro%20560%2C%204500-506%20Espinho!5e0!3m2!1sen!2spt!4v1583256483975!5m2!1sen!2spt"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.8524251220906!2d-8.632019384331677!3d40.96281163016978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd247870d60aa793%3A0xc0db88213bb1d88!2sR.%20do%20Agueiro%20105%2C%203885-516%20Esmoriz!5e0!3m2!1sen!2spt!4v1602091114351!5m2!1sen!2spt"
               width="800"
               height="600"
               frameborder="0"
@@ -1046,7 +1057,10 @@
 
       <footer class="site-footer">
         <div class="footerContent">
-          Website made by
+          designed by
+          <div class="author">Isabel Fonseca</div>
+          <br />
+          developed by
           <div class="author">João Lopes</div>
         </div>
       </footer>
