--- a/index.html
+++ b/index.html
@@ -236,12 +236,16 @@
               <h2 class="section-title mb-3">Equipa</h2>
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="row switch-container">
+            <div
+              class="col-lg-6 mb-5 switch2"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img src="images/equipa.jpg" alt="Image" class="img-fluid" />
             </div>
             <div
-              class="col-lg-5 ml-auto"
+              class="col-lg-5 ml-auto switch1"
               data-aos="fade-up"
               data-aos-delay="100"
             >
@@ -419,8 +423,12 @@
 
       <section class="site-section" id="tecidos-decoracao-section">
         <div class="container">
-          <div class="row containerRow">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="row containerRow switch-container">
+            <div
+              class="col-lg-6 mb-5 switch2"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img
                 src="images/tecidos_decoracao.jpg"
                 alt="Image"
@@ -428,7 +436,7 @@
               />
             </div>
             <div
-              class="col-lg-5 ml-auto"
+              class="col-lg-5 ml-auto switch1"
               data-aos="fade-up"
               data-aos-delay="100"
             >
@@ -494,8 +502,12 @@
 
       <section class="site-section" id="servicos-confecao-section">
         <div class="container">
-          <div class="row containerRow">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="row containerRow switch-container">
+            <div
+              class="col-lg-6 mb-5 switch2"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <img
                 src="images/servicos_confecao.jpg"
                 alt="Image"
@@ -503,7 +515,7 @@
               />
             </div>
             <div
-              class="col-lg-5 ml-auto"
+              class="col-lg-5 ml-auto switch1"
               data-aos="fade-up"
               data-aos-delay="100"
             >
@@ -524,90 +536,88 @@
 
       <section class="site-section bg-light" id="decoracao-section">
         <div class="container">
-          <div class="row mb-5">
-            <div
-              class="col-12 text-center"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <h2 class="section-title mb-3">Decoração</h2>
+          <div class="row mb-5 justify-content-center">
+            <div class="col-md-8 text-center">
+              <h2
+                class="section-title mb-3"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                Decoração
+              </h2>
             </div>
           </div>
-          <div class="row align-items-stretch">
+
+          <div class="row">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+              <div class="owl-carousel slide-one-item-alt">
+                <img
+                  src="images/artigos_decoracao.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="images/hotelaria_restauracao.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="images/design_interiores.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="custom-direction">
+                <a href="#" class="custom-prev"
+                  ><span><span class="icon-keyboard_backspace"></span></span></a
+                ><a href="#" class="custom-next"
+                  ><span><span class="icon-keyboard_backspace"></span></span
+                ></a>
+              </div>
+            </div>
             <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              class="col-lg-5 ml-auto"
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="unit-4">
-                <div class="unit-4-icon mr-4">
-                  <span class="text-primary flaticon-graphic-design"></span>
-                </div>
+              <div class="owl-carousel slide-one-item-alt-text">
                 <div>
-                  <h3>Artigos de Decoração</h3>
-                  <p>
+                  <h2 class="section-title mb-3">Artigos de Decoração</h2>
+                  <p class="lead">
                     Com os nossos artigos têxteis para decoração, pode
                     acrescentar cores e texturas irresistíveis à sua casa, loja
                     ou empresa, acrescentando magia ao ambiente!
                   </p>
-                  <p>
-                    <a
-                      href="#artigos-decoracao-section"
-                      class="saberMainButton smoothscroll"
-                      >Saber Mais</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="unit-4">
-                <div class="unit-4-icon mr-4">
-                  <span class="text-primary flaticon-graphic-design"></span>
+                  <a
+                    href="#artigos-decoracao-section"
+                    class="btn btn-primary smoothscroll"
+                    >Saber mais</a
+                  >
                 </div>
                 <div>
-                  <h3>Hotelaria e Restauração</h3>
-                  <p>
+                  <h2 class="section-title mb-3">Hotelaria e Restauração</h2>
+                  <p class="lead">
                     Se procura uma decoração à sua medida e do seu negócio, nós
                     somos a opção ideal para si com um excelente compromisso
                     entre qualidade de serviço e preço.
                   </p>
-                  <p>
-                    <a
-                      href="#hotelaria-restauracao-section"
-                      class="saberMainButton smoothscroll"
-                      >Saber Mais</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="unit-4">
-                <div class="unit-4-icon mr-4">
-                  <span class="text-primary flaticon-graphic-design"></span>
+                  <a
+                    href="#hotelaria-restauracao-section"
+                    class="btn btn-primary smoothscroll"
+                    >Saber mais</a
+                  >
                 </div>
                 <div>
-                  <h3>Design de Interiores</h3>
-                  <p>
+                  <h2 class="section-title mb-3">Design de Interiores</h2>
+                  <p class="lead">
                     Na Beatriz dos Panos não terá apenas uma equipa técnica apta
                     a dar-lhe aconselhamento personalizado de decoração.
                   </p>
-                  <p>
-                    <a
-                      href="#design-interiores-section"
-                      class="saberMainButton smoothscroll"
-                      >Saber Mais</a
-                    >
-                  </p>
+                  <a
+                    href="#design-interiores-section"
+                    class="btn btn-primary smoothscroll"
+                    >Saber mais</a
+                  >
                 </div>
               </div>
             </div>
@@ -617,29 +627,10 @@
 
       <section class="site-section bg-light" id="artigos-decoracao-section">
         <div class="container">
-          <div class="row mb-5">
-            <div
-              class="col-12 text-center"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <h3 class="h3 mb-4 text-black">Artigos de Decoração</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-              <img
-                src="images/artigos_decoracao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
-            </div>
-            <div
-              class="col-lg-5 ml-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+          <div class="row containerRow">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
+                <h3 class="h3 mb-4 text-black">Artigos de Decoração</h3>
                 <p>
                   Com os nossos artigos têxteis para decoração, pode acrescentar
                   cores e texturas irresistíveis à sua casa, loja ou empresa,
@@ -654,24 +645,42 @@
                 </p>
               </div>
             </div>
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <img
+                src="images/artigos_decoracao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
           </div>
         </div>
       </section>
 
       <section class="site-section bg-light" id="hotelaria-restauracao-section">
         <div class="container">
-          <div class="row mb-5">
+          <div class="row containerRow switch-container">
             <div
-              class="col-12 text-center"
+              class="col-lg-6 mb-5 switch2"
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <h3 class="h3 mb-4 text-black">Hotelaria e Restauração</h3>
+              <img
+                src="images/hotelaria_restauracao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div
+              class="col-lg-5 ml-auto switch1"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="mb-4">
+                <h3 class="h3 mb-4 text-black">Hotelaria e Restauração</h3>
                 <p>
                   Se procura uma decoração à sua medida e do seu negócio, nós
                   somos a opção ideal para si com um excelente compromisso entre
@@ -687,46 +696,16 @@
                 </p>
               </div>
             </div>
-            <div
-              class="col-lg-6 ml-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <img
-                src="images/hotelaria_restauracao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
-            </div>
           </div>
         </div>
       </section>
 
       <section class="site-section bg-light" id="design-interiores-section">
         <div class="container">
-          <div class="row mb-5">
-            <div
-              class="col-12 text-center"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <h3 class="h3 mb-4 text-black">Design de Interiores</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-              <img
-                src="images/design_interiores.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
-            </div>
-            <div
-              class="col-lg-5 ml-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+          <div class="row containerRow">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
+                <h3 class="h3 mb-4 text-black">Design de Interiores</h3>
                 <p>
                   Na Beatriz dos Panos não terá apenas uma equipa técnica apta a
                   dar-lhe aconselhamento personalizado de decoração.
@@ -752,6 +731,17 @@
                   >
                 </p>
               </div>
+            </div>
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <img
+                src="images/design_interiores.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
