--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
                         >
                       </li>
                       <li>
+                        <a
+                          href="#complementos-confecao-section"
+                          class="nav-link"
+                          >Complementos de Confeção
+                        </a>
+                      </li>
+                      <li>
                         <a href="#servicos-confecao-section" class="nav-link"
                           >Serviços de Confeção</a
                         >
@@ -321,7 +328,9 @@
             >
               <div class="owl-carousel slide-one-item-alt-text">
                 <div>
-                  <h2 class="section-title mb-3">Tecidos de Confeção e Moda</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Tecidos de Confeção e Moda
+                  </h2>
                   <p class="lead">
                     Na nossa loja pode encontrar uma grande variedade de tecidos
                     a metro de alta qualidade para todos os projetos de costura
@@ -335,7 +344,9 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">Tecidos de Decoração</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Tecidos de Decoração
+                  </h2>
                   <p class="lead">
                     Pensar numa solução de decoração completa e criativa na sua
                     casa ou no seu negócio é tão simples como vir visitar-nos e
@@ -349,7 +360,9 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">Complementos de Confeção</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Complementos de Confeção
+                  </h2>
                   <p class="lead">
                     Se procura artigos e acessórios de costura para a execução
                     dos seus trabalhos de costura, chegou ao sítio certo.
@@ -361,7 +374,9 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">Serviços de Confeção</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Serviços de Confeção
+                  </h2>
                   <p class="lead">
                     Para além da confeção de artigos para decoração, também
                     dispomos de serviço de confeção de todo o tipo de roupas por
@@ -500,7 +515,7 @@
         </div>
       </section>
 
-      <section class="site-section" id="servicos-confecao-section">
+      <section class="site-section last-section" id="servicos-confecao-section">
         <div class="container">
           <div class="row containerRow switch-container">
             <div
@@ -582,7 +597,9 @@
             >
               <div class="owl-carousel slide-one-item-alt-text">
                 <div>
-                  <h2 class="section-title mb-3">Artigos de Decoração</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Artigos de Decoração
+                  </h2>
                   <p class="lead">
                     Com os nossos artigos têxteis para decoração, pode
                     acrescentar cores e texturas irresistíveis à sua casa, loja
@@ -595,7 +612,9 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">Hotelaria e Restauração</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Hotelaria e Restauração
+                  </h2>
                   <p class="lead">
                     Se procura uma decoração à sua medida e do seu negócio, nós
                     somos a opção ideal para si com um excelente compromisso
@@ -608,7 +627,9 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">Design de Interiores</h2>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Design de Interiores
+                  </h2>
                   <p class="lead">
                     Na Beatriz dos Panos não terá apenas uma equipa técnica apta
                     a dar-lhe aconselhamento personalizado de decoração.
@@ -700,7 +721,10 @@
         </div>
       </section>
 
-      <section class="site-section bg-light" id="design-interiores-section">
+      <section
+        class="site-section last-section bg-light"
+        id="design-interiores-section"
+      >
         <div class="container">
           <div class="row containerRow">
             <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
@@ -796,7 +820,7 @@
         </div>
       </section>
 
-      <section class="site-section" id="portfolio-section">
+      <section class="site-section last-section" id="portfolio-section">
         <div class="container">
           <div class="row mb-3">
             <div
@@ -980,7 +1004,10 @@
         </div>
       </section>
 
-      <section class="site-section bg-light" id="contactos-section">
+      <section
+        class="site-section last-section bg-light"
+        id="contactos-section"
+      >
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center">
