--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img src="images/empresa.jpg" alt="Image" class="img-fluid" />
+              <video class="video" controls autoplay>
+                <source src="./assets/videos/video.m4v" type="video/mp4" />
+              </video>
             </div>
           </div>
         </div>
