Horario section added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                           >Serviços de Confeção</a
                         >
                       </li>
+                      <li>
+                        <a href="#tecidos-tecnicos-section" class="nav-link"
+                          >Tecidos Técnicos</a
+                        >
+                      </li>
                     </ul>
                   </li>
                   <li class="has-children">
@@ -187,12 +192,26 @@
           </div>
         </div>
 
-        <a href="#empresa-section" class="mouse smoothscroll">
+        <a href="#horario-section" class="mouse smoothscroll">
           <span class="mouse-icon">
             <span class="mouse-wheel"></span>
           </span>
         </a>
       </div>
+
+      <section class="site-section" id="horario-section">
+        <div class="container">
+          <div class="row mb-5">
+            <div
+              class="col-12 text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <img src="./images/horario.png" alt="horario" style="max-width: 100%;" />
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="site-section" id="empresa-section">
         <div class="container">
@@ -314,6 +333,11 @@
                   alt="Image"
                   class="img-fluid"
                 />
+                <img
+                  src="images/tecidos_tecnicos.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
               </div>
               <div class="custom-direction">
                 <a href="#" class="custom-prev"
@@ -386,6 +410,20 @@
                   </p>
                   <a
                     href="#servicos-confecao-section"
+                    class="btn btn-primary smoothscroll"
+                    >Saber mais</a
+                  >
+                </div>
+                <div>
+                  <h2 class="section-title carousel-item-title mb-3">
+                    Tecidos Técnicos
+                  </h2>
+                  <p class="lead">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aliquam ultrices dolor diam, sed rhoncus velit pretium nec.
+                  </p>
+                  <a
+                    href="#tecidos-tecnicos-section"
                     class="btn btn-primary smoothscroll"
                     >Saber mais</a
                   >
@@ -517,7 +555,7 @@
         </div>
       </section>
 
-      <section class="site-section last-section" id="servicos-confecao-section">
+      <section class="site-section" id="servicos-confecao-section">
         <div class="container">
           <div class="row containerRow switch-container">
             <div
@@ -546,6 +584,36 @@
                   empresas.
                 </p>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="site-section last-section" id="tecidos-tecnicos-section">
+        <div class="container">
+          <div class="row containerRow">
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
+              <div class="mb-4">
+                <h3 class="h3 mb-4 text-black">Tecidos Técnicos</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                  condimentum augue quis commodo tristique. Nullam vestibulum
+                  interdum nulla, et gravida ipsum dignissim id. Orci varius
+                  natoque penatibus et magnis dis parturient montes, nascetur
+                  ridiculus mus.
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-lg-6 ml-auto"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <img
+                src="images/tecidos_tecnicos.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
