CSS minor changes

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     <a href="#home-section" class="nav-link">Home</a>
                     <ul class="dropdown">
                       <li>
+                        <a href="#horario-section" class="nav-link">Horário</a>
+                      </li>
+                      <li>
                         <a href="#empresa-section" class="nav-link">Empresa</a>
                       </li>
                       <li>
@@ -207,7 +210,11 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img src="./images/horario.png" alt="horario" style="max-width: 100%;" />
+              <img
+                src="./images/horario.png"
+                alt="horario"
+                style="max-width: 100%"
+              />
             </div>
           </div>
         </div>
@@ -292,6 +299,9 @@
                 <p>A satisfação do cliente é a nossa prioridade!</p>
               </div>
             </div>
+          </div>
+          <div class="team">
+            <div class="team-member">team member</div>
           </div>
         </div>
       </section>
