Team members added

--- a/index.html
+++ b/index.html
@@ -300,8 +300,25 @@
               </div>
             </div>
           </div>
-          <div class="team">
-            <div class="team-member">team member</div>
+          <div class="team" data-aos="fade-up" data-aos-delay="100">
+            <div class="team-member" style="background: url(./images/person1.jpg);">
+              <div class="team-member-content">team member</div>
+            </div>
+            <div class="team-member" style="background: url(./images/person2.jpg);">
+              <div class="team-member-content">team member</div>
+            </div>
+            <div class="team-member" style="background: url(./images/person3.jpg);">
+              <div class="team-member-content">team member</div>
+            </div>
+            <div class="team-member" style="background: url(./images/person4.jpg);">
+              <div class="team-member-content">team member</div>
+            </div>
+            <div class="team-member" style="background: url(./images/person5.jpg);">
+              <div class="team-member-content">team member</div>
+            </div>
+            <div class="team-member" style="background: url(./images/person6.jpg);">
+              <div class="team-member-content">team member</div>
+            </div>
           </div>
         </div>
       </section>
